# alphadia

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Dockerfile  Dockerfile.pipfreeze  FDR_HIDDEN_DECOYS_PLAN.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  compose.yaml  debug_calibration.ipynb  debug_lvl1.ipynb  pyproject.toml  ruff-lint-strict.toml  setup.py
.claude/: constants_pattern.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: _run_tests.yml  black.yml  branch-checks.yaml  create_release.yml  e2e_testing.yml  extended_e2e_testing.yml  fdr_performance.yml  legacy_create_release.yml  legacy_publish_on_pypi.yml  nightly_checks.yml  performance_testing.yml  pip_installation.yml  publish_and_release.yml  publish_docker.yml  publish_docker_image.yml  publish_on_pypi.yml  release.yml  release_new.yml  tmp_test.yml  update_requirements.yml
alpakaweird/: __init__.py  cli.py
alphadia/: __init__.py  calibration.py  cli.py  dia.py  exceptions.py  fdr.py  fdr_utils.py  fdrexperimental.py  features.py  finetunemetrics.py  fragcomp.py  grouping.py  gui.py  hybridselection.py  library.py  libtransform.py  outputAccumulator.py  outputaccumulator.py  outputtransform.py  pjit.py  planning.py  plexscoring.py  prefilter.py  quadrupole.py  search_plan.py  search_step.py  smoothing.py  tempmmap.py  test_data_downloader.py  testing.py  testmetric.py  thermo.py  tunning.py  utils.py  validate.py  venn.py
alphadia/_fdrx/: __init__.py  base.py
alphadia/analysis/: __init__.py  actions.py
alphadia/annotation/: __init__.py  identification.py  library.py  percolation.py  psm_stats.py
alphadia/calibration/: estimator.py  models.py  plot.py  property.py
alphadia/consensus/: fdr.py  utils.py
alphadia/constants/: default.yaml  default_ng.yaml  default_python.yaml  default_rust.yaml  keys.py  multistep.yaml  settings.py
alphadia/data/: __init__.py  alpharaw.py  alpharaw_wrapper.py  bruker.py  dia_cycle.py  stats.py  thermo.py  utils.py
alphadia/extraction/: __init__.py  apex_determination.py  archive.py  calibration.py  candidateselection.py  data.py  elution_group_assembly.py  fdr.py  fdrexperimental.py  features.py  hybridselection.py  libtransform.py  planning.py  plexscoring.py  plotting.py  processlogger.py  quadrupole.py  scoring.py  test_utils.py  testing.py  utils.py  validate.py
alphadia/fdr/: classifiers.py  fdr.py  plotting.py  utils.py  zscore_nn_classifier.py
alphadia/fdr_/: fdr.py  plotting.py
alphadia/fdrx/: base.py  plotting.py  stats.py  utils.py
alphadia/fragcomp/: fragcomp.py  utils.py
alphadia/libtransform/: base.py  decoy.py  fasta_digest.py  flatten.py  harmonize.py  libtransform.py  loader.py  mbr.py  multiplex.py  prediction.py
alphadia/numba/: config.py  fft.py  fragments.py  numeric.py
alphadia/outputtransform/: df_builders.py  fragment_accumulator.py  grouping.py  outputaccumulator.py  protein_fdr.py  quant_builder.py  quant_output_builder.py  search_plan_output.py  utils.py
alphadia/outputtransform_/: build_df.py  outputtransform.py  protein_fdr.py  quant_builder.py
alphadia/peakgroup/: config_df.py  fft.py  kernel.py  search.py  utils.py
alphadia/plexscoring/: __init__.py  config.py  containers.py  output.py  plexscoring.py  quadrupole.py  utils.py
alphadia/plotting/: cycle.py  debug.py  utils.py
alphadia/preprocessing/: __init__.py  calibration.py  connecting.py  deisotoping.py  msmsgeneration.py  peakfinding.py  peakstats.py  smoothing.py
alphadia/raw_data/: __init__.py  alpharaw_wrapper.py  bruker.py  dia_cycle.py  interface.py
alphadia/reporting/: logging.py  reporting.py
alphadia/scoring/: utils.py
alphadia/search/: __init__.py
alphadia/transferlearning/: metrics.py  train.py
alphadia/utilities/: fragment_container.py  jit_config.py  logging.py
alphadia/validation/: base.py  schemas.py  validate.py
alphadia/workflow/: base.py  config.py  manager.py  optimization.py  optimizer.py  peptidecentric.py  reporting.py  searchoptimization.py
docs/: algorithm.rst  conf.py  contributing.md  developer_guide.md  development.md  guides.md  index.md  index.rst  installation.md  methods.md  modules.rst  quickstart.md
docs/_diagrams/: libtransform.drawio
docs/algorithm/: protein_inference.md
docs/alphadia/: _fdrx.rst  calibration.rst  fdr.rst  fdrexperimental.rst  features.rst  fragcomp.rst  grouping.rst  hybridselection.rst  libtransform.rst  outputtransform.rst  planning.rst  plexscoring.rst  quadrupole.rst  scoring.rst  utils.rst  (+6 more)
gui/: babel.config.js  config.yaml  forge.config.js  package-lock.json  package.json  webpack.config.js
misc/: .bumpversion.cfg  bumpversion.cfg  check_version.sh  discover_project_files.py  get_current_version.sh  inner.sh  loose_pip_install.sh  outer.sh  parse_parameters.py  pip_install.sh  speclib_config.py  stable_pip_install.sh
nbs/: Untitled.ipynb  calibration.ipynb  debug_lvl1_bruker.ipynb  debug_lvl1_thermo.ipynb  extract.ipynb  extract.py  mono_crash.mem.18201.117914e00.blob  mono_crash.mem.18201.7000079e3000.blob  mono_crash.mem.18201.70000baf5000.blob  mono_crash.mem.18201.70000f325000.blob  mono_crash.mem.2004.114bbde00.blob  mono_crash.mem.2004.7000030dd000.blob  mono_crash.mem.2004.70000aa1f000.blob  mono_crash.mem.2004.70000ba22000.blob  mono_crash.mem.2004.70000ca25000.blob  mono_crash.mem.2004.70000da28000.blob  mono_crash.mem.2004.70000ea2b000.blob  mono_crash.mem.2004.70000fa2e000.blob  mono_crash.mem.2004.700010a31000.blob  mono_crash.mem.2004.700011a34000.blob  overlap_comparisons.ipynb  tutorial.ipynb
plans/: rust_optimization_priorities.md
requirements/: _requirements.freeze.txt  _requirements_freeze.txt  requirements.constraints.txt  requirements.txt  requirements_development.txt  requirements_docs.txt  requirements_loose.txt  requirements_test.txt  requirements_tests.txt
scripts/: ZSCORE_NN_README.md  fdr_test_script.py
tests/: pytest.ini  run_e2e_tests.sh  run_nb_tests.sh  run_performance_tests.sh  run_tests.sh  run_unit_integration_tests.sh  run_unit_tests.sh  test_gui.py  test_transpose_data.ipynb
(+414 files in other folders)
