[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alpakaweird"
requires-python = ">=3.9.0"
dynamic = ["version", "dependencies", "optional-dependencies"]

authors = [
    {name = "Al P. Weird", email = "alpweird@alpweird.com"},
]
description = "An open-source Python package of alpakaweird."
readme = "README.md"
keywords = [
    "bioinformatics",
    "software",
]
license = {file = "LICENSE.txt"}
classifiers = [
     "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive"
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
#Documentation = "https://readthedocs.org"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["alpakaweird*"]  # ["*"] by default
#exclude = ["mypackage.tests*"]

[tool.setuptools.dynamic]
# https://stackoverflow.com/a/73600610
dependencies = {file = ["requirements/requirements_loose.txt"]}
optional-dependencies = { stable = { file = ["requirements/requirements.txt",
] }, test = { file = [ "requirements/requirements_test.txt",
] }, development = { file = ["requirements/requirements_development.txt", "requirements/requirements_test.txt"
] }}
version = {attr = "alpakaweird.__version__"}

[project.scripts]
alpakaweird = "alpakaweird.cli:run"
